objects/BMCServiceDesk__Custom_Action__c.object
<CustomObject>
    <description>Object to store custom actions defined by administrators.</description>
    <fields>
        <fullName>BMCServiceDesk__ActionName__c</fullName>
        <inlineHelpText>Use this field to enter a unique alphanumeric identifier that you want to assign to the custom action.</inlineHelpText>
        <label>Action Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Description__c</fullName>
        <inlineHelpText>Use this field to enter a description of the custom action. For example, you can create a custom action to open the Google website in a new browser window.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__DisplayAs__c</fullName>
        <label>Display As</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Menu Item In Action Menu</fullName>
                </value>
                <value>
                    <fullName>Icon Button on Toolbar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Form__c</fullName>
        <inlineHelpText>From the list of options, select the form where this custom action is displayed as a menu command of the Actions menu.</inlineHelpText>
        <label>Form</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LaunchIn__c</fullName>
        <label>Launch In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remedyforce tab</fullName>
                    <default>true</default>
                    <label>Remedyforce tab</label>
                </value>
                <value>
                    <fullName>Browser tab</fullName>
                </value>
                <value>
                    <fullName>Browser window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__LaunchUrl__c</fullName>
        <inlineHelpText>Use this field to enter URL of the external system or the Salesforce page that you want to access when you run this custom action.</inlineHelpText>
        <label>Launch URL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Parameters__c</fullName>
        <label>Parameters</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__ProfileAccess__c</fullName>
        <label>Profile Access</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Type__c</fullName>
        <description>This will identify that it is action or agent tool</description>
        <inlineHelpText>This will identify that it is action or agent tool</inlineHelpText>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this field if the custom action record is no longer valid, but the record has to be retained for compliance with the records retention policy.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Action</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Caption{00000000}</displayFormat>
        <label>Caption ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>